--- a/scrape/private/index.html
+++ b/scrape/private/index.html
@@ -9,9 +9,12 @@
   <!-- We will render our React app into a div with an id of 'app' -->
   <!-- We can grab it off the DOM by saing `document.getElementById('app');` -->
   <h1>Get philosophers</h1>
-  <a href="/scr/phil/a-c">A-C</a>
+<!--   <a href="/scr/phil/a-c">A-C</a>
   <a href="/scr/phil/d-h">D-H</a>
   <a href="/scr/phil/i-q">I-Q</a>
-  <a href="/scr/phil/r-z">R-Z</a>
+  <a href="/scr/phil/r-z">R-Z</a> -->
+
+  <h1>Sort First Round Urls</h1>
+<!--   <a href='/scr/firstUrl'>Sort</a> -->
 </body>
 </html>
