--- a/scrape/private/index.html
+++ b/scrape/private/index.html
@@ -9,12 +9,13 @@
   <!-- We will render our React app into a div with an id of 'app' -->
   <!-- We can grab it off the DOM by saing `document.getElementById('app');` -->
   <h1>Get philosophers</h1>
-<!--   <a href="/scr/phil/a-c">A-C</a>
-  <a href="/scr/phil/d-h">D-H</a>
-  <a href="/scr/phil/i-q">I-Q</a>
-  <a href="/scr/phil/r-z">R-Z</a> -->
+    <p>A-C</p> <!-- <a href="/scr/phil/a-c">link</a> -->
+    <p>D-H</p> <!-- <a href="/scr/phil/d-h">link</a> -->
+    <p>I-Q</p> <!-- <a href="/scr/phil/i-q">link</a> -->
+    <p>R-Z</p> <!-- <a href="/scr/phil/r-z">link</a> -->
 
   <h1>Sort First Round Urls</h1>
-<!--   <a href='/scr/firstUrl'>Sort</a> -->
+    <p>Trie</p> <!-- <a href='/scr/firstUrl/trie'>link</a> -->
+    <p>Hash Table</p> <!-- <a href='/scr/firstUrl/set'>link</a> -->
 </body>
 </html>
