include link for scr request

--- a/scrape/private/index.html
+++ b/scrape/private/index.html
@@ -17,5 +17,8 @@
   <h1>Sort First Round Urls</h1>
     <p>Trie</p> <!-- <a href='/scr/firstUrl/trie'>link</a> -->
     <p>Hash Table</p> <!-- <a href='/scr/firstUrl/set'>link</a> -->
+
+  <h1>Philosopher Data<h1>
+    <p1>Get</p1><a href='/scr/philData'>link</a>
 </body>
 </html>
