update html for new routes

--- a/scrape/private/index.html
+++ b/scrape/private/index.html
@@ -8,17 +8,24 @@
 <body>
   <!-- We will render our React app into a div with an id of 'app' -->
   <!-- We can grab it off the DOM by saing `document.getElementById('app');` -->
-  <h1>Get philosophers</h1>
+  <h3>Get philosophers</h3>
     <p>A-C</p> <!-- <a href="/scr/phil/a-c">link</a> -->
     <p>D-H</p> <!-- <a href="/scr/phil/d-h">link</a> -->
     <p>I-Q</p> <!-- <a href="/scr/phil/i-q">link</a> -->
     <p>R-Z</p> <!-- <a href="/scr/phil/r-z">link</a> -->
 
-  <h1>Sort First Round Urls</h1>
+  <h3>URLS</h3>
     <p>Trie</p> <!-- <a href='/scr/firstUrl/trie'>link</a> -->
-    <p>Hash Table</p> <!-- <a href='/scr/firstUrl/set'>link</a> -->
+    <p>Get Urls</p> <!-- <a href='/scr/firstUrl/url/set/url'>link</a> -->
 
-  <h1>Philosopher Data<h1>
-    <p1>Get</p1><a href='/scr/philData'>link</a>
+  <h3>NAMES</h3>
+    <p> Get names </p> <!-- <a href='/scr/firstUrl/alldata/set/name'>link</a> -->
+  <h3>Philosopher Data</h3>
+    <p>Get</p> <!-- <a href='/scr/philData'>link</a> -->
+  <h3>Missing data </h3>
+    <a href='/scr/missing/birth'><p>birth</p></a>
+    <a href='/scr/missing/death'><p>death</p></a>
+    <a href='/scr/missing/residency'><p>residency</p></a>
 </body>
 </html>
+
